--- a/matriculaUtfpr/src/main/webapp/cadastro/CadastroCandidato.xhtml
+++ b/matriculaUtfpr/src/main/webapp/cadastro/CadastroCandidato.xhtml
@@ -19,7 +19,7 @@
 	</div>
 	<div>
 		<h:outputLabel value="Disciplina" />
-		<h:inputText value="#{cadastroBean.candidato.disciplina}" />
+		<h:inputText value="#{cadastroBean.disciplina}" />
 	</div>
 	<h:commandButton value="Cadastrar" action="#{cadastroBean.salvar}" />
 </h:form>
