--- a/matriculaUtfpr/src/main/webapp/cadastro/lista.xhtml
+++ b/matriculaUtfpr/src/main/webapp/cadastro/lista.xhtml
@@ -6,16 +6,11 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-<h:head>
-	<h:outputStylesheet library="css" name="bootstrap.min.css" />
-	<h:outputStylesheet library="css" name="style-admin.css" />
-</h:head>
-
 <h:body>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Casa do Código</a>
+          <a class="navbar-brand" href="#">Matricula UTFPR</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -27,11 +22,11 @@
     </nav>
 	
 	<div class="container">
-	<h1>Lista de Livros</h1>
+	<h1>Lista de Candidatos</h1>
 
 	<h:messages />
 
-	<h:dataTable var="livro" value="#{adminListaLivrosBean.livros}"
+	<h:dataTable var="livro" value="#{cadastroBean.listaCandidatos}"
 			class="table table-bordered table-striped table-hover">
 		<h:column>
 			<f:facet name="header">CPF</f:facet>
