--- a/matriculaUtfpr/src/main/webapp/cadastro/lista.xhtml
+++ b/matriculaUtfpr/src/main/webapp/cadastro/lista.xhtml
@@ -26,7 +26,7 @@
 
 	<h:messages />
 
-	<h:dataTable var="livro" value="#{cadastroBean.listaCandidatos}"
+	<h:dataTable var="candidato" value="#{cadastroBean.listaCandidatos}"
 			class="table table-bordered table-striped table-hover">
 		<h:column>
 			<f:facet name="header">CPF</f:facet>
